"""
üìå **Seigr Threat Detection Engine**
Handles **signature-based detection, anomaly analysis, structured logging, and security responses**  
in compliance with **Seigr threat mitigation protocols**.
"""

import logging
import uuid
from datetime import datetime, timezone
from typing import Any, Dict, List, Optional

# üîê Seigr Imports
from src.crypto.constants import SEIGR_CELL_ID_PREFIX
from src.crypto.hash_utils import generate_hash
from src.immune_system.threat_response import ThreatResponseManager
from src.logger.secure_logger import secure_logger
from src.seigr_protocol.compiled.common_pb2 import (
    StandardResponse,
    ThreatDetectionLog,
    ThreatLevel,
)
from src.seigr_protocol.compiled.error_handling_pb2 import (
    ErrorLogEntry,
    ErrorResolutionStrategy,
    ErrorSeverity,
)
from src.seigr_protocol.compiled.alerting_pb2 import AlertSeverity

logger = logging.getLogger(__name__)

# ===============================
# üõ° **Threat Detection Engine**
# ===============================


class ThreatDetectionEngine:
    """
    **Core engine for Seigr's ecosystem threat detection.**
    - **Analyzes cryptographic signatures, behavioral patterns, and hashes.**
    - **Detects threats using structured logging & Seigr protocol.**
    - **Mitigates threats using Seigr's immune system integration.**
    """

    def __init__(self, response_manager: Optional[ThreatResponseManager] = None):
        """
        **Initialize the ThreatDetectionEngine.**

        Args:
            response_manager (ThreatResponseManager, optional): **Threat response handler.**
        """
        self.response_manager = response_manager or ThreatResponseManager()
        secure_logger.log_audit_event(
            severity=AlertSeverity.ALERT_SEVERITY_INFO,
            category="Threat Detection",
            message=f"{SEIGR_CELL_ID_PREFIX} ThreatDetectionEngine initialized.",
        )

    # ===============================
    # üîç **Signature-Based Threat Detection**
    # ===============================

    def detect_signature_threat(
        self, data: bytes, known_threat_signatures: List[str]
    ) -> Optional[ThreatDetectionLog]:
        """
        **Detects threats based on known cryptographic hash signatures.**

        Args:
            data (bytes): **Incoming data to analyze.**
            known_threat_signatures (List[str]): **List of known malicious hashes.**

        Returns:
            ThreatDetectionLog | None: **Threat detection event if identified, otherwise None.**
        """
        try:
            data_hash = generate_hash(data)

            if data_hash in known_threat_signatures:
                threat_event = self._create_threat_log(
                    origin="SignatureDetection",
                    threat_level=ThreatLevel.THREAT_LEVEL_HIGH,
                    description="‚ö†Ô∏è Known threat signature detected.",
                    metadata={"hash": data_hash},
                    mitigated=False,
                )
                secure_logger.log_audit_event(
                    severity=ErrorSeverity.ERROR_SEVERITY_CRITICAL,
                    category="Threat Detection",
                    message=f"{SEIGR_CELL_ID_PREFIX} Detected threat signature: {data_hash}",
                )

                self.response_manager.handle_threat(threat_event)
                return threat_event

            secure_logger.log_audit_event(
                severity=AlertSeverity.ALERT_SEVERITY_INFO,
                category="Threat Detection",
                message=f"{SEIGR_CELL_ID_PREFIX} No known signature threats detected.",
            )
            return None

        except Exception as e:
            self._log_error(
                "signature_threat_detection_fail", "Failed to detect signature threat", e
            )
            raise ValueError("Signature threat detection failed.") from e

    # ===============================
    # üî¨ **Behavioral-Based Threat Analysis**
    # ===============================

    def detect_anomalous_behavior(
        self, data_patterns: Dict[str, Any]
    ) -> Optional[ThreatDetectionLog]:
        """
        **Detects threats using behavioral anomaly detection.**

        Args:
            data_patterns (Dict[str, Any]): **Behavioral patterns & scoring data.**

        Returns:
            ThreatDetectionLog | None: **Threat event if anomaly is detected, otherwise None.**
        """
        try:
            anomaly_score = sum(data_patterns.get("scores", []))
            threshold = data_patterns.get("threshold", 50)

            if anomaly_score > threshold:
                threat_event = self._create_threat_log(
                    origin="BehavioralAnalysis",
                    threat_level=ThreatLevel.THREAT_LEVEL_MODERATE,
                    description="‚ö†Ô∏è Anomalous behavior detected.",
                    metadata={"anomaly_score": anomaly_score, "threshold": threshold},
                    mitigated=False,
                )

                secure_logger.log_audit_event(
                    severity=ErrorSeverity.ERROR_SEVERITY_WARNING,
                    category="Threat Detection",
                    message=f"{SEIGR_CELL_ID_PREFIX} Detected anomaly score {anomaly_score}.",
                )

                self.response_manager.handle_threat(threat_event)
                return threat_event

            secure_logger.log_audit_event(
                severity=AlertSeverity.ALERT_SEVERITY_INFO,
                category="Threat Detection",
                message=f"{SEIGR_CELL_ID_PREFIX} No anomalous behaviors detected.",
            )
            return None

        except Exception as e:
            self._log_error("anomalous_behavior_detection_fail", "Failed to detect anomaly", e)
            raise ValueError("Anomalous behavior detection failed.") from e

    # ===============================
    # üîÑ **Structured Threat Logging**
    # ===============================

    def _create_threat_log(
        self,
        origin: str,
        threat_level: ThreatLevel,
        description: str,
        metadata: Dict[str, Any],
        mitigated: bool = False,
    ) -> ThreatDetectionLog:
        """
        **Creates a structured ThreatDetectionLog protobuf message.**

        Args:
            origin (str): **Source of detection (e.g., Signature, Behavioral).**
            threat_level (ThreatLevel): **Severity level.**
            description (str): **Threat description.**
            metadata (Dict[str, Any]): **Additional threat details.**
            mitigated (bool, optional): **If the threat has been neutralized. Defaults to False.**

        Returns:
            ThreatDetectionLog: **Structured protobuf log for threat detection.**
        """
        detection_time = datetime.now(timezone.utc).isoformat()

        return ThreatDetectionLog(
            threat_level=threat_level,
            origin=origin,
            description=description,
            detection_time={"created_at": detection_time},
            metadata=metadata,
            response_action="Logged and Alerted",
            mitigated=mitigated,
            impact_scope="local",
            mitigation_strategy="Immediate Isolation",
            escalation_policy_id="default_policy",
        )

    # ===============================
    # üìä **Standardized Threat Responses**
    # ===============================

    def log_standard_response(
        self,
        status: str,
        message: str,
        threat_level: ThreatLevel = ThreatLevel.THREAT_LEVEL_UNDEFINED,
    ) -> StandardResponse:
        """
        **Logs a standardized threat response.**

        Args:
            status (str): **Response status message.**
            message (str): **Detailed response description.**
            threat_level (ThreatLevel, optional): **Threat level classification.**

        Returns:
            StandardResponse: **Structured protobuf response log.**
        """
        response = StandardResponse(
            status=status,
            message=message,
            threat_level=threat_level,
            request_id=str(uuid.uuid4()),
            metadata={"component": "ThreatDetectionEngine"},
        )

        secure_logger.log_audit_event(
            severity=AlertSeverity.ALERT_SEVERITY_INFO,
            category="Threat Response",
            message=f"{SEIGR_CELL_ID_PREFIX} Standard response logged: {response}",
        )

        return response

    # ===============================
    # ‚ö†Ô∏è **Structured Error Logging**
    # ===============================

    def _log_error(self, error_id: str, message: str, exception: Exception):
        """
        **Logs an error using a structured protocol buffer entry.**

        Args:
            error_id (str): **Unique identifier for the error.**
            message (str): **Error description.**
            exception (Exception): **Error details.**
        """
        error_entry = ErrorLogEntry(
            error_id=f"{SEIGR_CELL_ID_PREFIX}_{error_id}",
            severity=ErrorSeverity.ERROR_SEVERITY_HIGH,
            component="Threat Detection",
            message=message,
            details=str(exception),
            resolution_strategy=ErrorResolutionStrategy.ERROR_STRATEGY_ALERT_AND_TERMINATE,
        )

        secure_logger.log_audit_event(
            severity=ErrorSeverity.ERROR_SEVERITY_CRITICAL,
            category="Error Handling",
            message=f"{SEIGR_CELL_ID_PREFIX} {message}: {exception}",
        )
